
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "nest-asyncio>=1.6.0",
    "python-telegram-bot[all,job-queue]==20.7",
    "slack-sdk>=3.34.0",
    "telegram>=0.0.1",
    "twilio>=9.4.5",
    "yt-dlp>=2025.1.26",
]
